==> RT-Thread/rt-thread/bsp/wch/risc-v/Libraries/ch32_drivers/drv_usart_v2.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "board.h"
#include "drv_usart_v2.h"

static rt_err_t ch32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct ch32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);
    uart = rt_container_of(serial, struct ch32_uart, serial);
    ch32_uart_init(uart->config);
    uart->handle.Init.USART_BaudRate = cfg->baud_rate;

    switch (cfg->data_bits)
    {
    case DATA_BITS_8:
        uart->handle.Init.USART_WordLength = USART_WordLength_8b;
        break;
    case DATA_BITS_9:
        uart->handle.Init.USART_WordLength = USART_WordLength_9b;
        break;

    default:
        uart->handle.Init.USART_WordLength = USART_WordLength_8b;
        ;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_1:
        uart->handle.Init.USART_StopBits = USART_StopBits_1;
        break;
    case STOP_BITS_2:
        uart->handle.Init.USART_StopBits = USART_StopBits_0_5;
        break;
    case STOP_BITS_3:
        uart->handle.Init.USART_StopBits = USART_StopBits_2;
        break;
    case STOP_BITS_4:
        uart->handle.Init.USART_StopBits = USART_StopBits_1_5;
        break;
    default:
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_ODD:
        uart->handle.Init.USART_Parity = USART_Parity_Odd;
        break;
    case PARITY_EVEN:
        uart->handle.Init.USART_Parity = USART_Parity_Even;
        break;
    case PARITY_NONE:
        uart->handle.Init.USART_Parity = USART_Parity_No;
        break;
    default:
        break;
    }

    switch (cfg->flowcontrol)
    {
    case RT_SERIAL_FLOWCONTROL_NONE:
        uart->handle.Init.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
        break;
    case RT_SERIAL_FLOWCONTROL_CTSRTS:
        uart->handle.Init.USART_HardwareFlowControl = USART_HardwareFlowControl_CTS;
        break;
    default:
        uart->handle.Init.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
        break;
    }
    uart->handle.Init.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_DeInit(uart->handle.Instance);
    USART_Init(uart->handle.Instance, &uart->handle.Init);
    USART_Cmd(uart->handle.Instance, ENABLE);
#ifdef RT_SERIAL_USING_DMA
    uart->dma_rx.remaining_cnt = serial->config.dma_ping_bufsz;
#endif
    return RT_EOK;
}

static rt_err_t ch32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct ch32_uart *uart;
    rt_ubase_t       ctrl_arg = (rt_ubase_t)arg;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct ch32_uart, serial);
    if (ctrl_arg & (RT_DEVICE_FLAG_RX_BLOCKING | RT_DEVICE_FLAG_RX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_RX)
            ctrl_arg = RT_DEVICE_FLAG_DMA_RX;
        else
            ctrl_arg = RT_DEVICE_FLAG_INT_RX;
    }
    else if (ctrl_arg & (RT_DEVICE_FLAG_TX_BLOCKING | RT_DEVICE_FLAG_TX_NON_BLOCKING))
    {
        if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_TX)
            ctrl_arg = RT_DEVICE_FLAG_DMA_TX;
        else
            ctrl_arg = RT_DEVICE_FLAG_INT_TX;
    }

    switch (cmd)
    {
    /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:
        NVIC_Set(uart->config->irq_type, DISABLE);
        if (ctrl_arg & RT_DEVICE_FLAG_INT_RX)
        {
            USART_ITConfig(uart->handle.Instance, USART_IT_RXNE, DISABLE);
        }

        if (ctrl_arg & RT_DEVICE_FLAG_INT_TX)
        {
            USART_ITConfig(uart->handle.Instance, USART_IT_TC, DISABLE);

        }
#ifdef RT_SERIAL_USING_DMA
        if (ctrl_arg & RT_DEVICE_FLAG_DMA_RX)
        {
            NVIC_Set(uart->dma_rx.handle.dma_irq, DISABLE);
            USART_ITConfig(uart->handle.Instance, USART_IT_IDLE, DISABLE);
            DMA_DeInit(uart->dma_rx.handle.Instance);

        }
        else if (ctrl_arg & RT_DEVICE_FLAG_DMA_TX)
        {
            NVIC_Set(uart->dma_tx.handle.dma_irq, DISABLE);
            USART_ITConfig(uart->handle.Instance, USART_IT_TC, DISABLE);
            USART_ClearFlag(uart->handle.Instance, USART_FLAG_TC);
            DMA_DeInit(uart->dma_tx.handle.Instance);
        }
#endif
        break;

    case RT_DEVICE_CTRL_CONFIG:
#ifdef RT_SERIAL_USING_DMA
        if (ctrl_arg & (RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX))
        {
            ch32_uart_dma_config(serial, ctrl_arg);

        }
        else
            ch32_control(serial, RT_DEVICE_CTRL_SET_INT, (void *)ctrl_arg);
        break;
#endif
    case RT_DEVICE_CTRL_SET_INT:
        NVIC_Set(uart->config->irq_type, ENABLE);
        if (ctrl_arg & RT_DEVICE_FLAG_INT_RX)
        {

            USART_ITConfig(uart->handle.Instance, USART_IT_RXNE, ENABLE);
            USART_ClearITPendingBit(uart->config->Instance, USART_IT_RXNE);
            USART_ClearFlag(uart->handle.Instance, USART_FLAG_RXNE);
        }
        else if (ctrl_arg & RT_DEVICE_FLAG_INT_TX)
        {
            USART_ITConfig(uart->handle.Instance, USART_IT_TC, ENABLE);
            USART_ClearFlag(uart->handle.Instance, USART_FLAG_TC);
        }
        NVIC_Set(uart->config->irq_type, ENABLE);
        break;

    case RT_DEVICE_CHECK_OPTMODE:
        if (ctrl_arg & RT_DEVICE_FLAG_DMA_TX)
            return RT_SERIAL_TX_BLOCKING_NO_BUFFER;
        else
            return RT_SERIAL_TX_BLOCKING_BUFFER;
    case RT_DEVICE_CTRL_CLOSE:
#ifdef RT_SERIAL_USING_DMA
        DMA_Cmd(uart->dma_tx.handle.Instance, DISABLE);
        DMA_Cmd(uart->dma_rx.handle.Instance, DISABLE);
        NVIC_Set(uart->dma_rx.handle.dma_irq, DISABLE);
#endif
        USART_DeInit(uart->handle.Instance);
        NVIC_Set(uart->config->irq_type, DISABLE);
        USART_ITConfig(uart->handle.Instance, USART_IT_TC, DISABLE);
        USART_ITConfig(uart->handle.Instance, USART_IT_RXNE, DISABLE);
        USART_ITConfig(uart->handle.Instance, USART_IT_IDLE, DISABLE);
        USART_ITConfig(uart->handle.Instance, USART_IT_RXNE, DISABLE);
        break;
    }

    return RT_EOK;
}

static int ch32_putc(struct rt_serial_device *serial, char c)
{
    struct ch32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct ch32_uart, serial);
     while (USART_GetFlagStatus(uart->config->Instance, USART_FLAG_TC) == RESET);
    uart->config->Instance->DATAR = c;
/* Transmit Data */

    return 1;
}

static int ch32_getc(struct rt_serial_device *serial)
{
    struct ch32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    uart = rt_container_of(serial, struct ch32_uart, serial);

    return (int)(uart->handle.Instance->DATAR & (uint16_t)0xFF);
}

static rt_ssize_t ch32_transmit(struct rt_serial_device *serial,
                              rt_uint8_t              *buf,
                              rt_size_t                size,
                              rt_uint32_t              tx_flag)
{
    struct ch32_uart *uart;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(buf != RT_NULL);
    uart = rt_container_of(serial, struct ch32_uart, serial);

#ifdef RT_SERIAL_USING_DMA
    if (uart->uart_dma_flag & RT_DEVICE_FLAG_DMA_TX)
    {
        DMA_Cmd(uart->dma_tx.handle.Instance, DISABLE);
        uart->dma_tx.handle.Instance->MADDR = (unsigned int)buf;
        uart->dma_tx.handle.Instance->CNTR = size & 0xFFFF;
        DMA_Cmd(uart->dma_tx.handle.Instance, ENABLE);

        return size & 0xFFFF;
    }
#endif

    return size;
}

void USART1_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART1_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

void USART2_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART2_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

void USART3_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART3_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

void UART4_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART4_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

void UART5_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART5_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

void UART7_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART7_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

void UART8_IRQHandler(void)
{
    GET_INT_SP();
    /* enter interrupt */
    rt_interrupt_enter();

    uart_isr(&(uart_obj[UART8_INDEX].serial));

    /* leave interrupt */
    rt_interrupt_leave();
    FREE_INT_SP();
}

int rt_hw_usart_init(void)
{
    rt_err_t  result  = 0;
    rt_size_t obj_num = sizeof(uart_obj) / sizeof(struct ch32_uart);

    ch32_uart_get_config();
    for (int i = 0; i < obj_num; i++)
    {
        uart_obj[i].config = &uart_config[i];
        /* init UART object */
        uart_obj[i].serial.ops = &ch32_uart_ops;
        /* register UART device */
        rt_hw_serial_register(&uart_obj[i].serial, uart_obj[i].config->name, RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_INT_TX | RT_DEVICE_FLAG_DMA_TX, NULL);
        RT_ASSERT(result == RT_EOK);
    }

    return result;
}
